--- a/pollock.cabal
+++ b/pollock.cabal
@@ -21,7 +21,7 @@ executable pollock
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.7  && <4.8
+  build-depends:       base 
                ,       snap >=0.13
                ,       text >=1.2.0.4
                    
